# citygloom

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: mesh.h  shader.h  version.h.in  window.h
shaders/: default.frag  default.vert
src/: main.cpp  mesh.cpp  shader.cpp  window.cpp
